tests/runnable/test_05_return.hd
// test 5 : Has a return

void main()
{
    return;
}